--- a/Kentalis/Base.lproj/Main.storyboard
+++ b/Kentalis/Base.lproj/Main.storyboard
@@ -1,31 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="13B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="PcV-lP-JWc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="13C64" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="PcV-lP-JWc">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
     </dependencies>
     <scenes>
-        <!--View Controller - Leerlingen-->
-        <scene sceneID="uV3-qr-NqR">
-            <objects>
-                <viewController id="qAq-ZD-uWC" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="2Th-yK-6GX"/>
-                        <viewControllerLayoutGuide type="bottom" id="Q1R-68-Qkm"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="JhI-M1-D85">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="Leerlingen" id="VaV-c2-9jO"/>
-                    <connections>
-                        <segue destination="RlT-vb-XbG" kind="push" id="gqr-zP-SeE"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="CVP-QV-QRH" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="525" y="120"/>
-        </scene>
         <!--Table View Controller-->
         <scene sceneID="L31-HN-8j2">
             <objects>
@@ -59,39 +37,16 @@
         <scene sceneID="8wB-9v-Hp3">
             <objects>
                 <tabBarController definesPresentationContext="YES" id="PcV-lP-JWc" sceneMemberID="viewController">
-                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                    <nil key="simulatedBottomBarMetrics"/>
                     <tabBar key="tabBar" contentMode="scaleToFill" id="9Fm-12-1kP">
                         <rect key="frame" x="129" y="330" width="163" height="49"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </tabBar>
-                    <connections>
-                        <segue destination="qAq-ZD-uWC" kind="relationship" relationship="viewControllers" id="rPx-fa-gcM"/>
-                        <segue destination="LYc-zc-2MW" kind="relationship" relationship="viewControllers" id="LV3-ZY-uQE"/>
-                    </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="P2x-P0-4dl" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="17" y="475"/>
-        </scene>
-        <!--View Controller - Activiteiten-->
-        <scene sceneID="0xX-ci-kQJ">
-            <objects>
-                <viewController id="LYc-zc-2MW" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="gtV-WG-5la"/>
-                        <viewControllerLayoutGuide type="bottom" id="FXZ-GW-I5w"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="jbF-fj-BP1">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="Activiteiten" id="K7T-H8-AJW"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="e8q-mI-8AV" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="525" y="802"/>
         </scene>
     </scenes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
