--- a/Kentalis/Base.lproj/Main.storyboard
+++ b/Kentalis/Base.lproj/Main.storyboard
@@ -4,43 +4,23 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
     </dependencies>
     <scenes>
-        <!--View Controller - Leerlingen-->
-        <scene sceneID="z3d-3N-a7P">
-            <objects>
-                <viewController id="tNk-GY-ERC" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="Rux-Tp-5vR"/>
-                        <viewControllerLayoutGuide type="bottom" id="v8l-GP-A8n"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="VTh-30-v6w">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="Leerlingen" id="C7U-bw-Qd2"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Kjq-im-hyv" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1085" y="296"/>
-        </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="1Mv-4W-waY">
             <objects>
                 <tabBarController definesPresentationContext="YES" id="cuL-dk-Z2d" sceneMemberID="viewController">
-                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                    <nil key="simulatedBottomBarMetrics"/>
                     <tabBar key="tabBar" contentMode="scaleToFill" id="GuV-85-bxv">
                         <rect key="frame" x="129" y="330" width="163" height="49"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </tabBar>
                     <connections>
-                        <segue destination="tNk-GY-ERC" kind="relationship" relationship="viewControllers" id="x7t-YV-lIh"/>
                         <segue destination="p1x-lX-nX6" kind="relationship" relationship="viewControllers" id="dIL-aK-Mq9"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pmH-X4-Sox" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="551" y="623"/>
+            <point key="canvasLocation" x="53" y="533"/>
         </scene>
         <!--View Controller - Activiteit-->
         <scene sceneID="qhZ-di-87e">
@@ -59,7 +39,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="MqZ-S2-kgN" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1085" y="949"/>
+            <point key="canvasLocation" x="649" y="865"/>
         </scene>
     </scenes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
