--- a/Kentalis/Base.lproj/Main.storyboard
+++ b/Kentalis/Base.lproj/Main.storyboard
@@ -4,26 +4,26 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
     <scenes>
-        <!--Students View Controller - Leerlingen-->
-        <scene sceneID="v4s-4J-N5F">
+        <!--Students View Controller - Studenten-->
+        <scene sceneID="g5y-eI-VLc">
             <objects>
-                <tableViewController id="DaD-26-3cE" customClass="StudentsViewController" sceneMemberID="viewController">
-                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="k1J-tA-4kB">
+                <tableViewController id="O1Z-Gv-Bya" customClass="StudentsViewController" sceneMemberID="viewController">
+                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="UG2-Uf-acF">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="reusableCell" textLabel="O7b-Nx-OL5" style="IBUITableViewCellStyleDefault" id="mpj-sD-GZt">
-                                <rect key="frame" x="0.0" y="22" width="320" height="44"/>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="reusableCell" textLabel="b7f-Ab-eSj" style="IBUITableViewCellStyleDefault" id="Ahb-PH-IGO">
+                                <rect key="frame" x="0.0" y="86" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="mpj-sD-GZt" id="YX0-gq-VzU">
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Ahb-PH-IGO" id="Zf6-b3-e2M">
                                     <rect key="frame" x="0.0" y="0.0" width="287" height="43"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="O7b-Nx-OL5">
+                                        <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="b7f-Ab-eSj">
                                             <rect key="frame" x="15" y="0.0" width="270" height="43"/>
                                             <autoresizingMask key="autoresizingMask"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="0.0"/>
                                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
@@ -32,15 +32,31 @@
                             </tableViewCell>
                         </prototypes>
                         <connections>
-                            <outlet property="dataSource" destination="DaD-26-3cE" id="ruh-4Z-6Hv"/>
-                            <outlet property="delegate" destination="DaD-26-3cE" id="QcQ-Qa-vzv"/>
+                            <outlet property="dataSource" destination="O1Z-Gv-Bya" id="y9j-wb-swm"/>
+                            <outlet property="delegate" destination="O1Z-Gv-Bya" id="mg6-YS-G9t"/>
                         </connections>
                     </tableView>
-                    <tabBarItem key="tabBarItem" title="Leerlingen" id="qHD-WZ-kKB"/>
+                    <navigationItem key="navigationItem" title="Studenten" id="TVT-Jq-65E"/>
                 </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="7o5-bB-5Df" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="lTo-Qg-QjJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1085" y="178"/>
+            <point key="canvasLocation" x="1703" y="168"/>
+        </scene>
+        <!--Navigation Controller - Studenten-->
+        <scene sceneID="64R-TB-M8t">
+            <objects>
+                <navigationController definesPresentationContext="YES" id="u0b-JM-ZjZ" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Studenten" id="N6R-0x-LbU"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="NYe-Cj-AKH">
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="O1Z-Gv-Bya" kind="relationship" relationship="rootViewController" id="XSK-TJ-6Gf"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Umu-8O-UoH" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1169" y="168"/>
         </scene>
         <!--Activity View Controller - Activiteiten-->
         <scene sceneID="EhA-pJ-iCj">
@@ -82,7 +98,7 @@
                     </connections>
                 </searchDisplayController>
             </objects>
-            <point key="canvasLocation" x="1411" y="1497"/>
+            <point key="canvasLocation" x="1703" y="1113"/>
         </scene>
         <!--Navigation Controller - Activiteiten-->
         <scene sceneID="HW6-Rg-xUH">
@@ -98,7 +114,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HzF-EV-B0R" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="877" y="1497"/>
+            <point key="canvasLocation" x="1169" y="1113"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="1Mv-4W-waY">
@@ -111,7 +127,7 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </tabBar>
                     <connections>
-                        <segue destination="DaD-26-3cE" kind="relationship" relationship="viewControllers" id="22M-tI-1Ce"/>
+                        <segue destination="u0b-JM-ZjZ" kind="relationship" relationship="viewControllers" id="T7g-tT-pYb"/>
                         <segue destination="F2T-FX-Pj7" kind="relationship" relationship="viewControllers" id="k1C-xC-Uqh"/>
                     </connections>
                 </tabBarController>
